@@ -5,6 +5,6 @@ importFrom("stats", aggregate, predict, density, quantile, update)
 importFrom("utils", stack, unstack, head, tail)
 importFrom("sp", coordinates, overlay, bbox, Spatial, SpatialPixels, SpatialPixelsDataFrame, SpatialGrid, SpatialGridDataFrame, SpatialPolygons, spplot)
 exportClasses(Extent, BasicRaster, Raster, RasterLayer, RasterBrick, RasterStack, RasterStackBrick)
-exportMethods("[", area, bandnr, brick, calc, clump, crop, disaggregate, distance, extent, extract, expand, flip, intersect, ncell, nlayers, overlay, plotRGB, raster, reclass, resample, rotate, sampleRandom, stackSelect, shift, subs, trim, unstack, zonal)
+exportMethods("[", area, bandnr, brick, calc, clump, crop, disaggregate, distance, extent, extract, expand, flip, intersect, ncell, nlayers, overlay, plotRGB, raster, reclassify, resample, rotate, sampleRandom, stackSelect, shift, subs, trim, unstack, zonal)
 useDynLib(raster)
 exportPattern("^[^\\.]")
